[package]
name = "talos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alea = "0.2"
rayon = "1.5"
compute = { path = "/home/js/programs/compute" }
reverse = { path = "/home/js/programs/reverse" }
talos_procs = { path = "./talos_procs" }

