[package]
name = "talos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alea = "0.2"
rayon = "1.5"
seq-macro = "0.2"
compute = { git = "https://github.com/al-jshen/compute" }
reverse = { git = "https://github.com/al-jshen/reverse" }
talos_procs = { path = "./talos_procs" }

