[package]
name = "talos"
version = "0.1.0"
edition = "2018"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
license = "MIT OR Apache-2.0"

description = "Experimental crate for statistical modelling and Bayesian inference."
repository = "https://github.com/al-jshen/talos"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alea = "0.2"
rayon = "1.5"
seq-macro = "0.2"
compute = { git = "https://github.com/al-jshen/compute", version = "0.2" }
reverse = { git = "https://github.com/al-jshen/reverse", version = "0.2" }
talos_procs = { path = "./talos_procs", version = "0.1" }

