[package]
name = "talos_procs"
version = "0.1.0"
edition = "2018"

authors = ["Jeff Shen <jshen2014@hotmail.com>"]
license = "MIT OR Apache-2.0"

description = "Proc macros supporting `talos`."

[dependencies]
syn = { version = "1", features = ["extra-traits", "full"] }
quote = "1"

[lib]
proc-macro = true
